--- a/SCME.UI/PagesTech/TOUPage.xaml
+++ b/SCME.UI/PagesTech/TOUPage.xaml
@@ -5,7 +5,9 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:customControl="clr-namespace:SCME.UI.CustomControl" xmlns:ui="clr-namespace:SCME.UI"
       xmlns:res="clr-namespace:SCME.UI.Properties"
-      mc:Ignorable="d" x:Name="dVdtPage" 
+      xmlns:sys="clr-namespace:System;assembly=mscorlib"
+      xmlns:TOUTypes="clr-namespace:SCME.Types.TOU;assembly=SCME.Types"
+      mc:Ignorable="d" x:Name="dVdtPage" DataContext="{Binding RelativeSource={RelativeSource Self}, Path=VM}"
       d:DesignWidth="1280" d:DesignHeight="924"
       Title="{x:Static res:Resources.TOU}">
 
@@ -73,10 +75,24 @@
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
+                <Label Content="{x:Static res:Resources.Amperage}"   Grid.Column="0"  Grid.Row="0" />
+                <customControl:ValidatingTextBox Grid.Column="1"  Grid.Row="0" Padding="5" Margin="10"
+                          TextBlock.TextAlignment="Right" IsNumeric="True" 
+                                                 Minimum="{Binding Source={x:Static TOUTypes:TestParameters.CurrentAmplitudeMin}}" 
+                                                 Maximum="{Binding Source={x:Static TOUTypes:TestParameters.CurrentAmplitudeMax}}" 
+                          Text="{Binding Input.CurrentAmplitude}" />
+
+                <Label Content="{x:Static res:Resources.ITM}"   Grid.Column="0"  Grid.Row="2" />
+                <Label Content="{x:Static res:Resources.TGD}"   Grid.Column="0"  Grid.Row="3" />
+                <Label Content="{x:Static res:Resources.TGT}"   Grid.Column="0"  Grid.Row="4" />
+
+                <Label Content="{Binding Output.ITM}"   Grid.Column="1"  Grid.Row="2" />
+                <Label Content="{Binding Output.TGD}"   Grid.Column="1"  Grid.Row="3" />
+                <Label Content="{Binding Output.TGT}"   Grid.Column="1"  Grid.Row="4" />
                 <Label Name="lblFault" x:FieldModifier="private" Background="Tomato" Height="Auto" Padding="10"
-                       Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Content="Fault" />
+                       Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Content="Fault" />
                 <Label Name="lblWarning" x:FieldModifier="private" Background="Gold" Height="Auto" Padding="10"
-                       Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Content="Warning" />
+                       Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" Content="Warning" />
 
             </Grid>
         </Border>
@@ -89,10 +105,17 @@
                 Grid.Column="0" Grid.Row="1"
                 Content="{x:Static res:Resources.Back}"
                 Click="Back_Click"
-                Margin="0,0,0,0" />
+                Margin="6" />
+        
         <Button Grid.Column="2" Grid.Row="1"
                 Content="{x:Static res:Resources.Stop}"
                 Click="Stop_Click"
-                Margin="0,0,10,0" Background="{StaticResource xRed1}" />
+                Margin="6" Background="{StaticResource xRed1}" />
+        
+        <Button x:Name="btnStart"
+                Grid.Column="3" Grid.Row="1"
+                Content="{x:Static res:Resources.Start}"
+                Click="BtnStart_OnClick"
+                 Margin="6" Background="{StaticResource xGreen1}" />
     </Grid>
 </Page>
