--- a/SCME.UI/CustomControl/ListBoxTestParameters.xaml
+++ b/SCME.UI/CustomControl/ListBoxTestParameters.xaml
@@ -886,15 +886,15 @@
                 </Grid>
             </DataTemplate>
             <DataTemplate DataType="TOUParameters:TestParameters" x:Key="TOUParametersTemplate">
-                <Grid Visibility="{Binding RACIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,70,10" >
+                <Grid Visibility="{Binding TOUIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,70,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93*"/>
                         <ColumnDefinition Width="7*"/>
                     </Grid.ColumnDefinitions>
                     <Grid Style="{StaticResource ListItemGrid}">
                         <Border BorderBrush="{StaticResource xWhite1}" BorderThickness="1" />
-                        <Label HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="30" Margin="5,10" Content="RAC" />
-                        <Button x:Name="btnRAC" CommandParameter="7" Style="{StaticResource SpcButton}" IsEnabled="False" Margin="140,0,20,0">
+                        <Label HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="30" Margin="5,10" Content="TOU" />
+                        <Button x:Name="btnTOU" CommandParameter="7" Style="{StaticResource SpcButton}" IsEnabled="False" Margin="140,0,20,0">
                             <Grid Margin="10">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="84*" />
