--- a/SCME.UI/PagesTech/ProfilePage.xaml
+++ b/SCME.UI/PagesTech/ProfilePage.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:ui="clr-namespace:SCME.UI"
+      xmlns:TOUTypes="clr-namespace:SCME.Types.TOU;assembly=SCME.Types"
       xmlns:res="clr-namespace:SCME.UI.Properties"
       xmlns:customControl="clr-namespace:SCME.UI.CustomControl"
       mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="924"
@@ -932,8 +933,11 @@
                     <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" FontSize="32" HorizontalAlignment="Center" Content="{x:Static res:Resources.TOU}" />
 
                     <Label Grid.Column="0" Grid.Row="1" Margin="10" HorizontalAlignment="Left" Content="{x:Static res:Resources.TOUITM}"/>
-                    <customControl:ValidatingTextBox Grid.Column="1" Grid.Row="1" Padding="5" Margin="10" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="1000" Maximum="2500" Text="{Binding SelectedItem.ITM, ElementName=TestParameters, UpdateSourceTrigger=PropertyChanged}"/>
-
+                    <customControl:ValidatingTextBox Grid.Column="1" Grid.Row="1" Padding="5" Margin="10" TextBlock.TextAlignment="Right" IsNumeric="True" 
+                                                    Minimum="{Binding Source={x:Static TOUTypes:TestParameters.CurrentAmplitudeMin}}" 
+                                                    Maximum="{Binding Source={x:Static TOUTypes:TestParameters.CurrentAmplitudeMax}}"
+                                                    Text="{Binding SelectedItem.ITM, ElementName=TestParameters, UpdateSourceTrigger=LostFocus}"/>
+                    
                 </Grid>
             </TabItem>
 
