--- a/SCME.UI/PagesTech/TechnicianPage.xaml
+++ b/SCME.UI/PagesTech/TechnicianPage.xaml
@@ -192,8 +192,8 @@
 
                 <Button CommandParameter="17" Name="btnTOU"
                 Visibility="{Binding Source={x:Static res:Settings.Default}, Path=TOUIsVisible, Converter={StaticResource B2V}}">
-                    <Grid Background="{StaticResource xRed1}">
-                        <Path Data="" />
+                    <Grid Background="{StaticResource xGreen2}">
+                        <Path Data="{StaticResource TOUPath}" />
                         <Label Content="{x:Static res:Resources.TOU}" />
                     </Grid>
                 </Button>
