--- a/SCME.UI/CustomControl/ListBoxTestParameters.xaml
+++ b/SCME.UI/CustomControl/ListBoxTestParameters.xaml
@@ -906,7 +906,7 @@
                                 </Grid.RowDefinitions>
 
                                 <Label Grid.Column="0" Grid.Row="0" Margin="0,0,0,0" Content="{x:Static res:Resources.TOUITM}" />
-                                <Label Grid.Column="2" Grid.Row="0" HorizontalAlignment="Right" Content="{Binding ITM, UpdateSourceTrigger=LostFocus}" />
+                                <Label Grid.Column="2" Grid.Row="0" HorizontalAlignment="Right" Content="{Binding ITM_Input, UpdateSourceTrigger=LostFocus}" />
 
                             </Grid>
                         </Button>
