--- a/SCME.UI/CustomControl/ListViewTestParametersSelection.xaml
+++ b/SCME.UI/CustomControl/ListViewTestParametersSelection.xaml
@@ -825,6 +825,40 @@
                 </Grid>
             </DataTemplate>
 
+            <DataTemplate DataType="TOUParameters:TestParameters" x:Key="TOUParametersTemplate">
+                <Grid Visibility="{Binding TOUIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,0,10" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="93*"></ColumnDefinition>
+                        <ColumnDefinition Width="7*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid Style="{StaticResource ListItemGrid}">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="10*"></ColumnDefinition>
+                            <ColumnDefinition Width="90*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Border BorderBrush="{StaticResource xWhite1}" BorderThickness="1"  Grid.ColumnSpan="2"/>
+                        <CheckBox Grid.Column="0" IsEnabled="False" Visibility="Hidden"
+                                  IsChecked="{Binding IsEnabled, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" x:Name="cbTOUIsEnabled"                                  
+                                  HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Height="50" Width="50" Margin="15,15,0,0"/>
+                        <Label Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="30" Margin="5,10" Content="TOU" />
+
+                        <Grid Margin="10" Grid.Column="1" Visibility="{Binding IsEnabled, Converter={StaticResource B2V}}">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="85*" />
+                                <ColumnDefinition Width="15*" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+
+                            <Label Grid.Column="0" Grid.Row="0" Margin="0,0,0,0" Content="{x:Static res:Resources.TOUITM}" />
+                            <Label Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right" Content="{Binding CurrentAmplitude, UpdateSourceTrigger=PropertyChanged}" />
+
+                        </Grid>
+                    </Grid>
+                </Grid>
+            </DataTemplate>
+
         </customControl:MyDataTemplateDictionary>
     </ListView.Resources>
 
