--- a/SCME.UI/PagesUser/UserWorkModePage.xaml
+++ b/SCME.UI/PagesUser/UserWorkModePage.xaml
@@ -4,12 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:res="clr-namespace:SCME.UI.Properties"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SCME.UI.PagesUser"
+        xmlns:local="clr-namespace:SCME.UI"
         mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="944"
-        x:Name="userWorkModePage"
+        x:Name="userWorkModePage" DataContext="{Binding RelativeSource={RelativeSource Self}, Path=VM}"
         Title="{x:Static res:Resources.LoginPage_Title}" >
 
     <Page.Resources>
+
         <Style TargetType="{x:Type Label}" BasedOn="{StaticResource CLabelStyle}">
             <Setter Property="Foreground" Value="{StaticResource xWhite1}" />
             <Setter Property="Margin" Value="10" />
@@ -48,7 +49,6 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            <EventSetter Event="Click" Handler="Button_Click" />
         </Style>
 
     </Page.Resources>
@@ -57,7 +57,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="350" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="450" />
+            <ColumnDefinition Width="500" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="350" />
         </Grid.ColumnDefinitions>
@@ -72,29 +72,33 @@
             <RowDefinition Height="94" />
         </Grid.RowDefinitions>
 
-        <Button x:Name="btn_Operator" CommandParameter="1" Grid.Column="2" Grid.Row="1" Height="160">
+        <Button x:Name="OperatorButton" CommandParameter="{x:Static local:UserWorkMode.Operator}" Grid.Column="2" Grid.Row="1" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
             <Grid Background="{StaticResource xGreen1}">
                 <Path Data="{StaticResource LoginPath}" />
                 <Label Content="{x:Static res:Resources.OperatorMode}" />
             </Grid>
         </Button>
 
-        <Button x:Name="btn_ServiceMan" CommandParameter="2" Grid.Column="2" Grid.Row="3" Height="160">
+        <Button x:Name="ServiceManButton" CommandParameter="{x:Static local:UserWorkMode.ServiceMan}" Grid.Column="2" Grid.Row="3" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
             <Grid Background="{StaticResource xBlue3}">
                 <Path Data="{StaticResource TechPath}" />
                 <Label Content="{x:Static res:Resources.ServicemanMode}" />
             </Grid>
         </Button>
 
-        <Button x:Name="btn_SpecialMeasure" CommandParameter="3" Grid.Column="2" Grid.Row="5" Height="160">
+        <Button x:Name="OperatorBuildModeButton" CommandParameter="{x:Static local:UserWorkMode.OperatorBuildMode}" Grid.Column="2" Grid.Row="5" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
+            <Grid Background="{StaticResource xGreen1}">
+                <Label Content="{x:Static res:Resources.OperatorBuildMode}" />
+            </Grid>
+        </Button>
+
+        <Button x:Name="SpecialMeasureButton" Visibility="{Binding SpecialMeasureVisibility}" CommandParameter="{x:Static local:UserWorkMode.SpecialMeasure}" Grid.Column="0" Grid.Row="5" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
             <Grid Background="{StaticResource xRed2}">
                 <Path Data="{StaticResource SpecialMeasurePath}" />
                 <Label Content="{x:Static res:Resources.SpecialMeasureMode}" />
             </Grid>
         </Button>
 
-        <Button x:Name="btn_Back" Grid.Column="0" Grid.Row="7" Style="{StaticResource CButtonStyle}"            
-                Content="{x:Static res:Resources.Back}"
-                Click="btn_Back_OnClick"/>
+        <Button x:Name="BackButton" Grid.Column="0" Grid.Row="7" Style="{StaticResource CButtonStyle}" Content="{x:Static res:Resources.Back}" Click="BackButton_Click"/>
     </Grid>
 </Page>
