Убрал ошибку загрузки профилей в ProfileBuilder(менял sql). Добавил TOU. Сделал блокировку кнопки профилей в UI

--- a/SCME.UI/PagesTech/TechnicianPage.xaml
+++ b/SCME.UI/PagesTech/TechnicianPage.xaml
@@ -11,6 +11,9 @@
 
     <Page.Resources>
         <my:BooleanToVisibilityConverter x:Key="B2V" />
+        <my:TryBooleanToVisibilityConverter x:Key="BooleanToVisibility" />
+        <x:StaticExtension Member="my:Cache.Main" x:Key="Main"/>
+
 
         <Style TargetType="{x:Type Label}" BasedOn="{StaticResource CLabelStyle}">
             <Setter Property="Foreground" Value="{StaticResource xWhite1}" />
@@ -114,8 +117,8 @@
                     </Grid>
                 </Button>
 
-                <Button CommandParameter="7"
-                    Visibility="{Binding Source={x:Static res:Settings.Default}, Path=ReadOnlyProfiles, Converter={StaticResource B2V}, ConverterParameter=!}">
+                <Button CommandParameter="7" ToolTipService.ShowOnDisabled="True" ToolTipService.ToolTip="{Binding ProfilePageToolTip, Source={StaticResource Main}}"
+                    IsEnabled="{Binding IsLocal, Source={StaticResource Main}}">
                     <Grid Background="{StaticResource xPurple1}">
                         <Path Data="{StaticResource EditPath}" />
                         <Label Content="{x:Static res:Resources.Profiles}" />
