--- a/SCME.ProfileBuilder/CustomControl/ListBoxTestParameters.xaml
+++ b/SCME.ProfileBuilder/CustomControl/ListBoxTestParameters.xaml
@@ -901,6 +901,48 @@
                 </Grid>
             </DataTemplate>
 
+            <DataTemplate DataType="tou:TestParameters" x:Key="touParametersTemplate">
+                <Grid Visibility="Visible" Margin="0,10,70,10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="93*"/>
+                        <ColumnDefinition Width="7*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Style="{StaticResource ListItemGrid}">
+                        <Border BorderBrush="{StaticResource xWhite1}" BorderThickness="1" />
+                        <Label  HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="30" Margin="10" Padding="2" Content="TOU" />
+                        <Button x:Name="btnTOU" CommandParameter="7" Style="{StaticResource SpcButton}" IsEnabled="False" Margin="120,0,20,0">
+                            <Grid Margin="10">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="84*" />
+                                    <ColumnDefinition Width="2*" />
+                                    <ColumnDefinition Width="14*" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
+                                </Grid.RowDefinitions>
+
+                                <Label Grid.Column="0" Grid.Row="0" Margin="0,0,0,0" Content="{x:Static res:Resources.Itm_A}" />
+                                <Label Grid.Column="2" Grid.Row="0" HorizontalAlignment="Right" Content="{Binding CurrentAmplitude, UpdateSourceTrigger=PropertyChanged}" />
+                            </Grid>
+                        </Button>
+                    </Grid>
+                    <Grid Grid.Column="1">
+                        <Button Name="button" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}, Path=IsButtonDeleteVisible, Converter={StaticResource B2V}}"
+                            Background="White" Foreground="{StaticResource xPurple1}"
+                            VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
+                            Width="{Binding RelativeSource={RelativeSource Self}, Path=Height}"
+                            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}"
+                            Content="{StaticResource ClosePath}" Click="Button_OnClick"/>
+                    </Grid>
+                </Grid>
+            </DataTemplate>
+
         </customControl:MyDataTemplateDictionary>
     </ListView.Resources>
 
