--- a/SCME.ProfileBuilder/PagesTech/ProfilePage.xaml
+++ b/SCME.ProfileBuilder/PagesTech/ProfilePage.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:ui="clr-namespace:SCME.ProfileBuilder"
       xmlns:res="clr-namespace:SCME.ProfileBuilder.Properties"
+      xmlns:TOUTypes="clr-namespace:SCME.Types.TOU;assembly=SCME.Types"
       xmlns:customControl="clr-namespace:SCME.ProfileBuilder.CustomControl"
       xmlns:profiles="clr-namespace:SCME.Types.Profiles;assembly=SCME.Types"
       mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="924"  
@@ -222,6 +223,7 @@
                                 <ComboBoxItem Content="ATU"/>
                                 <ComboBoxItem Content="QrrTq"/>
                                 <ComboBoxItem Content="RAC"/>
+                                <ComboBoxItem Content="TOU"/>
                             </ComboBox>
 
                             <Button Grid.Column="3" Margin="10" x:Name="ButtonAddTestParameters" Content="{x:Static res:Resources.Add}" Click="ButtonAddTestParameters_OnClick"
@@ -808,6 +810,38 @@
 
                         <Label Grid.Column="0" Grid.Row="1" Margin="10" HorizontalAlignment="Left" Content="{x:Static res:Resources.RACResVoltage}"/>
                         <customControl:ValidatingTextBox x:Name="lbResVoltage" Grid.Column="2" Grid.Row="1" Padding="5" Margin="10" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="1000" Maximum="2500" Text="{Binding SelectedItem.ResVoltage, ElementName=TestParameters, UpdateSourceTrigger=PropertyChanged}"/>
+
+                    </Grid>
+                </Viewbox>
+            </TabItem>
+
+            <TabItem>
+                <Viewbox Stretch="Uniform" StretchDirection="DownOnly">
+                    <Grid Height="640">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="70*" />
+                            <ColumnDefinition Width="5*" />
+                            <ColumnDefinition Width="25*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+
+                        <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" FontSize="32" HorizontalAlignment="Center" Content="{x:Static res:Resources.Itm_A}" />
+
+                        <Label Grid.Column="0" Grid.Row="1" Margin="10" HorizontalAlignment="Left" Content="{x:Static res:Resources.Itm_A}"/>
+                        <customControl:ValidatingTextBox x:Name="lbTOUCurrentAmplitude" Grid.Column="2" Grid.Row="1" Padding="5" Margin="10" TextBlock.TextAlignment="Right" IsNumeric="True"
+                                                         Minimum="{Binding Source={x:Static TOUTypes:TestParameters.CurrentAmplitudeMin}}" 
+                                                        Maximum="{Binding Source={x:Static TOUTypes:TestParameters.CurrentAmplitudeMax}}"
+                                                         Text="{Binding SelectedItem.CurrentAmplitude, ElementName=TestParameters, UpdateSourceTrigger=LostFocus}"/>
 
                     </Grid>
                 </Viewbox>
